instructions.InstructionsDrawG.scala.code
brushdown()

for (n <- 0 to 2)

{ 
  for (n <- 0 to 3)
  {forward(); right()}
  



}
